Fixed star rating in venues/show and fixed mobile horizontal scrolling in assets/application.scss body

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,6 +22,8 @@ body {
   background-color: #F8F8F8;
   font-family: "Varela Round", "Open Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   padding-bottom: 200px;
+  overflow-x: hidden;
+  width: 100%;
 }
 
 a {
